# uraradi_archives

./: .gitignore  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app/: Chat.py  Data.py  Data_old.py  HOME.py  Radio.py  Transcript.py  Visualize.py  Visualize_old.py  config.py  mydatafunc.py  myfunc.py  myvizfunc.py  preprocess.py  setting.py  table.py  temp.py  util.py
app/pages/: 1_RADIO_INFO.py  1_VISUALIZE_RADIO.py  1_📈_VISUALIZE_RADIO.py  2_SHOW_FULL TEXT.py  2_TEXT_INFO.py  2_VIEW_FULL TEXT.py  2_📃_VIEW_FULL TEXT.py  2_📃_VIEW_FULL_TEXT.py  2_🔠_VISUALIZE_TEXT.py  3_ABOUT.py  3_SEARCH_TEXT.py  3_📃_VIEW_FULL_TEXT.py  3_🔍_SEARCH_TEXT.py  4_ABOUT.py  4_👀_ABOUT.py  4_🔍_SEARCH_TEXT.py  5_👀_ABOUT.py
input/: 2021-04-30.csv  2021-05-14.csv  2021-06-11.csv  2021-06-25.csv  2021-07-02.csv  2021-07-16.csv  2021-08-06.csv  2021-08-13.csv  2021-08-20.csv  2021-08-27.csv  2021-09-03.csv  2021-09-17.csv  2021-10-01.csv  2021-10-08.csv  2021-10-22.csv  2021-10-29.csv  2021-11-12.csv  2021-11-19.csv  2021-11-26.csv  2021-12-03.csv  2022-01-07.csv  2022-01-14.csv  2022-01-21.csv  2022-01-28.csv  2022-02-11.csv  2022-02-18.csv  2022-02-25.csv  2022-03-11.csv  2022-03-18.csv  2022-03-25.csv  2022-04-22.csv  2022-04-29.csv  2022-05-06.csv  2022-05-13.csv  2022-05-20.csv  2022-05-27.csv  2022-06-17.csv  2022-06-24.csv  2022-07-01.csv  2022-07-08.csv  (+15 more)
input/chat/: 2021-02-26.csv  2021-03-05.csv  2021-03-12.csv  2021-03-19.csv  2021-03-26.csv  (+82 more)
notebook/: step1_playlist_to_csv.ipynb  step2_csv_to_mp3.ipynb  step3_mp3_to_transcript.ipynb
(+58 files in other folders)
