[tool.poetry]
name = "uraradi-archives"
version = "0.1.0"
description = ""
authors = ["ikumyn1or0 <19ming3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.15"
pandas = "*"
numpy = "*"
streamlit = "*"
plotly = "*"
flake8 = "*"
ginza = "^5.1.2"
ja-ginza = "^5.1.2"
wordcloud = "^1.8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
