[tool.poetry]
name = "uraradi-archives"
version = "0.1.0"
description = ""
authors = ["ikumyn1or0 <19ming3@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9.13,<3.10"
pandas = "*"
numpy = "<2.0.0"
streamlit = "*"
plotly = "*"
flake8 = "*"
ginza = "^5.1.2"
ja-ginza = "^5.1.2"
wordcloud = "^1.8.2.2"
emoji = "^2.2.0"
pyarrow = "<17.0.0"
spacy = "3.7.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
